Commit previous changes by @Flexla54, @euclid9099 and @stephan418

--- a/client/src/app/components/input-card/input-card.component.scss
+++ b/client/src/app/components/input-card/input-card.component.scss
@@ -1,9 +1,13 @@
-@import "../../styles.scss";
+@import "../../../styles.scss";
 
 .alignment {
   display: flex;
   flex-direction: column;
   @include center(center, center);
+}
+
+p-button {
+  margin-top: 10px;
 }
 
 .p-button {
