--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,13 +1,14 @@
-<p>home works!</p>
 <div class="welcome-screen">
     <img src="./assets/pauwl-logo-full.png" alt="Complete pauwl logo" />
+    <p-button styleClass="buuton" [routerLink]="['setup', 'player']">Create Game</p-button>
 </div>
 <div class="game-list">
     @for (room of store.rooms(); track room) {
-        <div class="card">
-              <h5>{{room.name}}</h5>
-              <p><i class="pi pi-user"></i> {{room.players?.length ?? 0}}/10</p>
-              <p-button styleClass="buuton" (onClick)="joinGame(room)" [outlined]="true">Join</p-button>
-        </div>
+    <div class="card">
+        <h5>{{room.name}}</h5>
+        <p><i class="pi pi-user"></i> {{room.players?.length ?? 0}}/10</p>
+        <p-button styleClass="buuton" [routerLink]="['setup', 'player']" [queryParams]="{room: room.id}"
+            [outlined]="true">Join</p-button>
+    </div>
     }
 </div>
