--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -1,21 +1,37 @@
 @import '../../styles.scss';
 
 .welcome-screen {
-    height: 50vh;
-    margin-inline: auto;
-}
+    min-height: 50vh;
 
-.game-list {
-    width: max(90%, 750px);
-    
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-}
-
-.card {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    img {
+        display: block;
+        max-width: min(90vw, max(600px, 50%));
+    }
+}
+
+.game-list {
+    width: min(90%, 900px);
+    margin-inline: auto;
+    margin-block: 2rem;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+
+    gap: 1rem;
+}
+
+.card {
+    margin-inline: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    height: 100%;
+    width: 100%;
 }
 
 .buuton {
