--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -1,5 +1,10 @@
 @import '../../styles.scss';
 
+.p-button {
+  font-family: "Kalam", cursive;
+  font-weight: 700;
+}
+
 .welcome-screen {
     min-height: 50vh;
 
