--- a/client/src/app/voting/voting.component.html
+++ b/client/src/app/voting/voting.component.html
@@ -1,4 +1,6 @@
-<img class="logo-small" src="./assets/pauwl-logo-small.svg" />
+<div class="logo-container">
+    <img class="logo-small" src="./assets/pauwl-logo-small.svg" />
+</div>
 
 @if (!alreadyVoted) {
     <h1 class="title">Vote off!</h1>
