--- a/client/src/app/voting/voting.component.scss
+++ b/client/src/app/voting/voting.component.scss
@@ -1,6 +1,18 @@
+.logo-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+h2 {
+    width: 100%;
+    text-align: center;
+}
+
 .candidate {
     display: grid;
-    grid: 1fr 1fr / 1fr 1fr;
+    grid: 1fr 4em / 1fr 1fr;
     gap: 1ewm;
     align-items: center;
     justify-items: center;
@@ -9,6 +21,7 @@
 
     .meme {
         max-width: 100%;
+        max-height: 50vh;
     }
 
     .candidate__button {
